--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@ocdladefense/example-project",
+  "name": "@ocdladefense/s3",
   "version": "1.0.0",
   "scripts": {
-    "build": "babel assets/js/src -d assets/js/lib"
+    "build": "babel src -d dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
