--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
   "name": "@ocdladefense/s3",
   "version": "1.0.0",
+  "main": "dist/main.js",
   "scripts": {
-    "build": "babel src -d dist"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
-    "webpack": "^5.53.0"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "dependencies": {
     "@ocdladefense/view": "~2.0.0",
@@ -19,5 +12,12 @@
     "@aws-sdk/client-s3": "^3.171.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.171.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
