--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ocdladefense/s3",
   "version": "1.0.0",
-  "main": "dist/main.js",
+  "main": "src/commands.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
